--- a/src/index.css
+++ b/src/index.css
@@ -43,15 +43,15 @@ code {
 @layer base {
 :root {
     --font-size: 16px;
-    --background: #ffffff;
+    --background: oklch(100% 0.00011 271.152);
     --foreground: oklch(0.145 0 0);
     --card: #ffffff;
-    --card-foreground: oklch(0.145 0 0);
+    --cardforeground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
     --primary: #030213;
     --primary-foreground: oklch(1 0 0);
-    --secondary: oklch(0.95 0.0058 264.53);
+    --secondary: oklch(89.755% 0.0001 271.152);
     --secondary-foreground: #030213;
     --muted: #ececf0;
     --muted-foreground: #717182;
@@ -60,7 +60,7 @@ code {
     --destructive: #d4183d;
     --destructive-foreground: #ffffff;
     --border: rgba(0, 0, 0, 0.1);
-    --input: transparent;
+    --input: oklch(100% 0.00011 271.152); /*transparent;*/
     --input-background: #f3f3f5;
     --switch-background: #cbced4;
     --font-weight-medium: 500;
@@ -194,6 +194,8 @@ code {
     --foreground: #dcfce7;
     --card: #0f2317;
     --card-foreground: #dcfce7;
+    --menu-card-bg: oklch(89.755% 0.0001 271.152);
+    --menu-card-fg: #ffffff;
     --popover: #0f2317;
     --popover-foreground: #dcfce7;
     --primary: #22c55e;
