"Old color fix 1"

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ code {
 
   --primary: #000000;
   --secondary: #717182;
+  --ternary: #ececf0;
   --link: #0000ff;
 
   --button-background: #000000;
