--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,23 @@
   width: 8px;
 }
 
-*::-webkit-scrollbar-thumb {
-  background-color: transparent;
+*::-webkit-scrollbar-track {
+  background: transparent;
+  margin-top: 4px;    /* space before top */
+  margin-bottom: 4px; /* space before bottom */
 }
-*::-webkit-scrollbar-thumb:hover {
+
+*::-webkit-scrollbar-thumb {
   background-color: var(--scroll-bar);
   border-radius: 999px;
+  /* background-color: transparent; */
 }
+
+/* *::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scroll-bar);
+  border-radius: 999px;
+} */
+
 html {
   scrollbar-gutter: stable;
 }
